--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.14",
     "json-server": "^0.16.3",
     "typescript": "^4.4.2"
   }
