--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.14",
     "json-server": "^0.16.3",
